--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,7 @@ body {
 }
 
 header {
-  background-color: #1f2937;
-  color: white;
+  background-color: #1f2937; 
 }
 
 header a {
@@ -27,4 +26,38 @@ section.introduction {
   background-color: #1f2937;
 }
 
-/* make sure to assign a class to the other section elements when you continue. */
+.introduction h1 {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: extra-bold;
+}
+
+.introduction p {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+button {
+  color: #3882f6;
+}
+
+#callToAction {
+  background-color: #3882f6
+}
+
+section.gallery h2 {
+  font-size: 36px;
+  font-weight: extra-bold;
+  color: #1f2937; 
+}
+
+section.quote {
+  background-color: #e5e7eb;
+}
+
+blockquote {
+  font-size: 36px;
+  font-weight: light;
+  font-style: italic;
+  color: #1f2937;
+}
