--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,15 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+header, main, footer {
+  width: 80%;
+  margin: auto;
+}
+
 header {
   background-color: #1f2937; 
+  display: flex;
+  justify-content: space-between;
 }
 
 header a {
@@ -18,6 +25,12 @@ header a {
 header#logo {
   font-size: 28px;
   color: #f9faf8;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+
 }
 
 a {
@@ -40,7 +53,7 @@ section.introduction {
 }
 
 button {
-  color: #3882f6;
+  background-color: #3882f6;
 }
 
 #callToAction {
