Added Stylings to Class vertical-container
The content in the div vertical-container needed to be at 80% width while the background color needed to fill the screen.

I added stylings to it to make sure this was accomplished, while still keep a vertical display unlike the other containers.

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,15 @@ div.container {
   margin: auto;
 }
 
+div.vertical-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 80%;
+  margin: auto;
+
+}
+
 header a {
   font-size: 18px;
   color: #e5e7eb;
