Modified Layout of item with the class of placeholder
The original p.placeholder wouldn't properly style according to the project's specifications.

In order to solve this, I wrapped the p element in a div and gave the div the class instead.

In terms of stylings, I grayed out the background for the div and also used padding on the div to center the p text.

--- a/styles.css
+++ b/styles.css
@@ -66,9 +66,15 @@ div.hero_div {
   color: #e5e7eb;
 }
 
-p.placeholder {
+div.placeholder {
   background-color: gray;
   flex: 1;
+  text-align: center;
+}
+
+div.placeholder p {
+  padding-top: 20%;
+  padding-bottom: 20%;
 }
 
 button {
