--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ section.gallery h2 {
   font-size: 36px;
   font-weight: extra-bold;
   color: #1f2937; 
+  text-align: center;
 }
 
 section.quote {
