Applied formatting styles to the gallery section
Rearranged the HTML div containers and started styling the css for the website gallery.

A problem arose while completing this step. There is something messing up the format with each .gallery-img and the section in general.

Will have to research and address this in later commits.

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,22 @@ section.gallery h2 {
   text-align: center;
 }
 
+div.gallery-img {
+  width: 20%;
+}
+
+div.gallery-container {
+  display: flex;
+  justify-content: space-around;
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+div.div_placeholder {
+  border: 1px solid #3882f6;
+  border-radius: 5px;
+}
+
 section.quote {
   background-color: #e5e7eb;
 }
