--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ button {
   border: none;
   border-radius: 3px;
   margin: 5px;
+  margin-left: 0;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 20px;
