Modified the Structure of section#callToAction
Modified HTML markup and CSS stylings of callToAction to conform it to the mockup design.

Specifically I made a new div container structure as well as made sure the button appeared inline with the text.

--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,21 @@ button {
   border: 1px solid white;
 }
 
+.cta {
+  padding-right: 0;
+  padding-left: 0;
+  display: flex;
+}
+
+.cta-button {
+  justify-content: center;
+}
+
+.cta-container {
+  justify-content: center;
+}
+
+
 section.gallery h2 {
   font-size: 36px;
   font-weight: extra-bold;
