--- a/styles.css
+++ b/styles.css
@@ -153,10 +153,14 @@ div.gallery-container {
 }
 
 div.gallery-container p {
-  width: 20%;
+  width: 120px;
+  text-align: center;
+  padding-top: 5px;
 }
 
 div.div_placeholder {
+  width:  120px;
+  height: 120px;
   border: 1px solid #3882f6;
   border-radius: 5px;
 }
